--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>いいですね</title>
         <meta http-equiv="Content-Type" content="text/html"; charset=utf-8>
+        <meta http-equiv="refresh" content="0; url=http://www.pingry.org/" />
     </head>
     <body>
         どうでしたか。
