--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>いいですね</title>
+        <title>イー　オルド　ジャン　ピングリー</title>
         <meta http-equiv="Content-Type" content="text/html"; charset=utf-8>
         <meta http-equiv="refresh" content="0; url=http://www.pingry.org/" />
     </head>
-    <body>
-        どうでしたか。
+    <body style="text-align:center;">
+        <img src="heCOMES.jpg" style="height:500px;">
     </body>
 </html>
