--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <meta http-equiv="refresh" content="0; url=http://www.pingry.org/" />
     </head>
     <body style="text-align:center;">
-        <img src="heCOMES.jpg" style="height:500px;">
+        <img src="heCOMES.jpg" style="height:100vh;">
     </body>
 </html>
