--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html"; charset=utf-8>
         <meta http-equiv="refresh" content="0; url=http://www.pingry.org/" />
     </head>
-    <body style="text-align:center;">
+    <body style="text-align:center; margin: 0px">
         <img src="heCOMES.jpg" style="height:100vh;">
     </body>
 </html>
